--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Check PR title
+      run: |
+        title="${{ github.event.pull_request.title }}"
+        if [[ $title =~ ^octocat ]]; then
+        echo "PR title starts with 'octocat'"
+        exit 0
+        else
+        echo "PR title did not start with 'octocat'"
+        exit 1
+        fi    
+    
     - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
 
     - name: Set up Go
