--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,15 +6,18 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  TITLE: ${{ github.event.pull_request.title }}
+
 jobs:
 
   build:
     runs-on: ubuntu-latest
     steps:
+    
     - name: Check PR title
       run: |
-        title="${{ github.event.pull_request.title }}"
-        if [[ $title =~ ^octocat ]]; then
+        if [[ $TITLE =~ ^octocat ]]; then
         echo "PR title starts with 'octocat'"
         exit 0
         else
